--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Andrew Maus
 A simple Digital Clock, reminiscent of the digital alarm clocks a mere decade ago.
 Now that smart phones are so common, often your clock is replaced by your smartphone.
 I feel that the smartphone lacks the ever-present feel of a digital alarm clock, with its soft, red glow in the dark of your room: unintrusive, but always present.
-This clock reminds us of those times, and seeks to welcome you back with a familar style.
+This clock reminds us of those times, and seeks to welcome you back with a familiar style.
 
 The clock is programmed with javascript and implemented with html and css.
 
